2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* Fixes to static build. (though I can't really get it to work)

2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* save screen shots to ~/.ember/screenshots
	* Use the S_LOG* macros.
	

2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* Added a reference in Model to the ModelDefinition used
	* Added datatype and parsing of Sounds attached to an Action.
	* Use the S_LOG* macros.

2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* added modeldefs for columns and walls from munin
	* fixed paths for some models

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* fixed the names of some materials and changed to low res textures

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Started to add columns, and fixed a dist build bug in the Makefile.

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Added ability to remove building blocks and to create new construction from scratch.

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Don't forget to copy .skeleton files.

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Use the low res grass texture by default.

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Use the more correct "License" 

2005-03-23  Erik Hjortsberg  <erik@katastrof.nu>

	* added fence building blocks modelmappings
	* added campfire and fire modeldefs

2005-03-23  Erik Hjortsberg  <erik@katastrof.nu>

	* Cleaned up the logging a little bit more.

2005-03-23  Erik Hjortsberg  <erik@katastrof.nu>

	* moved and cleaned up the media definitions. Now almost all needed media is in svn. The directory media/common should point to the svn repository.

2005-03-22  Erik Hjortsberg  <erik@katastrof.nu>

	* Added ember specific media and media definitions.

2005-03-22  Erik Hjortsberg  <erik@katastrof.nu>

	* decrease the minimum camera distance 

2005-03-22  Erik Hjortsberg  <erik@katastrof.nu>

	* fixed erronous normal definitions

2005-03-22  Erik Hjortsberg  <erik@katastrof.nu>
